crates/plotnik-tests/tests/04-emit/types/alternations/error_distinct_record_declarations.txt
Row = (pair
  key: (_) @key
  value: (_) @val
)

Pair = (pair
  key: (_) @key
  value: (_) @val
)

Q = (program
  (expression_statement
    (parenthesized_expression
      (object
        [
          (Row) @x
          (Pair) @x
        ]
      )
    )
  )
)
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Row` and `Pair` across alternatives
  --> query.ptk:16:17
   |
16 |           (Row) @x
   |                 ^^
17 |           (Pair) @x
   |                  -- `@x` has type `Pair` here
   |
help: make every alternative produce the same type, or label the alternatives for a variant type
